#
# Copyright (C) 2003-2006 Intel Corporation
# 
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
# 
#

nobase_include_HEADERS =	asim/AColorDialog.h \
				asim/agt_syntax.h \
				asim/AGTTypes.h \
				asim/AnnotationAutoBezierArrow.h \
				asim/AnnotationCircle.h \
				asim/AnnotationContainer.h \
				asim/AnnotationCtrl.h \
				asim/AnnotationFactory.h \
				asim/AnnotationItemDB.h \
				asim/AnnotationItem.h \
				asim/AnnotationLine.h \
				asim/AnnotationRect.h \
				asim/AnnotationText.h \
				asim/AScrollView.h \
				asim/bookmark.h \
				asim/bookmarkImpl.h \
				asim/BookmarkMgr.h \
				asim/ColorMenuItem.h \
				asim/ColumnShadows.h \
				asim/HelpWindow.h \
				asim/IconFactory.h \
				asim/Main.h \
				asim/MDIWindow.h \
				asim/Q2DMAction.h \
				asim/snapDialog.h \
				asim/snapDialogImpl.h \
				asim/UpdColorInterface.h \
				asim/xpm/annCircle.xpm \
				asim/xpm/annLine.xpm \
				asim/xpm/annRect.xpm \
				asim/xpm/annText.xpm \
				asim/xpm/distanceTool.xpm \
				asim/xpm/fileopen.xpm \
				asim/xpm/fileprint.xpm \
				asim/xpm/filesave.xpm \
				asim/xpm/fillColor.xpm \
				asim/xpm/help_back.xpm \
				asim/xpm/help_contents.xpm \
				asim/xpm/help_forward.xpm \
				asim/xpm/help_home.xpm \
				asim/xpm/mwandCursor.xpm \
				asim/xpm/mwandTool.xpm \
				asim/xpm/paddingLocked.xpm \
				asim/xpm/paddingTool.xpm \
				asim/xpm/paddingUnlocked.xpm \
				asim/xpm/panningCursor.xpm \
				asim/xpm/pdown.xpm \
				asim/xpm/penColor.xpm \
				asim/xpm/resetarto.xpm \
				asim/xpm/selectLocked.xpm \
				asim/xpm/selectToolBar.xpm \
				asim/xpm/selectTool.xpm \
				asim/xpm/selectUnlocked.xpm \
				asim/xpm/shadeLocked.xpm \
				asim/xpm/shadeUnlocked.xpm \
				asim/xpm/shadingCursor.xpm \
				asim/xpm/shadingTool.xpm \
				asim/xpm/textColor.xpm \
				asim/xpm/viewmagfit.xpm \
				asim/xpm/viewmag-.xpm \
				asim/xpm/viewmag+.xpm \
				asim/xpm/zhm.xpm \
				asim/xpm/zhp.xpm \
				asim/xpm/zoomingCursor.xpm \
				asim/xpm/zoomingToolBar.xpm \
				asim/xpm/zoomingToolNW.xpm \
				asim/xpm/zoomingTool.xpm \
				asim/xpm/zoomLocked.xpm \
				asim/xpm/zoomUnlocked.xpm \
				asim/xpm/zvm.xpm \
				asim/xpm/zvp.xpm
