#
# Copyright (c) 2014, Intel Corporation
#
# All rights reserved.
# Redistribution and use in source and binary forms, with or without 
# modification, are permitted provided that the following conditions are 
# met:
# 
# - Redistributions of source code must retain the above copyright notice,
#   this list of conditions and the following disclaimer.
# - Redistributions in binary form must reproduce the above copyright 
#   notice, this list of conditions and the following disclaimer in the 
#   documentation and/or other materials provided with the distribution.
# - Neither the name of the Intel Corporation nor the names of its 
#   contributors may be used to endorse or promote products derived from 
#   this software without specific prior written permission.
#  
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS 
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT 
# LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A 
# PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT 
# OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, 
# SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED
# TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, 
# OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY 
# OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING 
# NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS 
# SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
#

nobase_include_HEADERS =	asim/AColorDialog.h \
				asim/agt_syntax.h \
				asim/AGTTypes.h \
				asim/AnnotationAutoBezierArrow.h \
				asim/AnnotationCircle.h \
				asim/AnnotationContainer.h \
				asim/AnnotationCtrl.h \
				asim/AnnotationFactory.h \
				asim/AnnotationItemDB.h \
				asim/AnnotationItem.h \
				asim/AnnotationLine.h \
				asim/AnnotationRect.h \
				asim/AnnotationText.h \
				asim/AScrollView.h \
				asim/bookmark.h \
				asim/bookmarkImpl.h \
				asim/BookmarkMgr.h \
				asim/ColorMenuItem.h \
				asim/ColumnShadows.h \
				asim/HelpWindow.h \
				asim/IconFactory.h \
				asim/Main.h \
				asim/MDIWindow.h \
				asim/Q2DMAction.h \
				asim/snapDialog.h \
				asim/snapDialogImpl.h \
				asim/UpdColorInterface.h \
				asim/xpm/annCircle.xpm \
				asim/xpm/annLine.xpm \
				asim/xpm/annRect.xpm \
				asim/xpm/annText.xpm \
				asim/xpm/distanceTool.xpm \
				asim/xpm/fileopen.xpm \
				asim/xpm/fileprint.xpm \
				asim/xpm/filesave.xpm \
				asim/xpm/fillColor.xpm \
				asim/xpm/help_back.xpm \
				asim/xpm/help_contents.xpm \
				asim/xpm/help_forward.xpm \
				asim/xpm/help_home.xpm \
				asim/xpm/mwandCursor.xpm \
				asim/xpm/mwandTool.xpm \
				asim/xpm/paddingLocked.xpm \
				asim/xpm/paddingTool.xpm \
				asim/xpm/paddingUnlocked.xpm \
				asim/xpm/panningCursor.xpm \
				asim/xpm/pdown.xpm \
				asim/xpm/penColor.xpm \
				asim/xpm/resetarto.xpm \
				asim/xpm/selectLocked.xpm \
				asim/xpm/selectToolBar.xpm \
				asim/xpm/selectTool.xpm \
				asim/xpm/selectUnlocked.xpm \
				asim/xpm/shadeLocked.xpm \
				asim/xpm/shadeUnlocked.xpm \
				asim/xpm/shadingCursor.xpm \
				asim/xpm/shadingTool.xpm \
				asim/xpm/textColor.xpm \
				asim/xpm/viewmagfit.xpm \
				asim/xpm/viewmag-.xpm \
				asim/xpm/viewmag+.xpm \
				asim/xpm/zhm.xpm \
				asim/xpm/zhp.xpm \
				asim/xpm/zoomingCursor.xpm \
				asim/xpm/zoomingToolBar.xpm \
				asim/xpm/zoomingToolNW.xpm \
				asim/xpm/zoomingTool.xpm \
				asim/xpm/zoomLocked.xpm \
				asim/xpm/zoomUnlocked.xpm \
				asim/xpm/zvm.xpm \
				asim/xpm/zvp.xpm
