#
# Copyright (c) 2014, Intel Corporation
#
# All rights reserved.
# Redistribution and use in source and binary forms, with or without 
# modification, are permitted provided that the following conditions are 
# met:
# 
# - Redistributions of source code must retain the above copyright notice,
#   this list of conditions and the following disclaimer.
# - Redistributions in binary form must reproduce the above copyright 
#   notice, this list of conditions and the following disclaimer in the 
#   documentation and/or other materials provided with the distribution.
# - Neither the name of the Intel Corporation nor the names of its 
#   contributors may be used to endorse or promote products derived from 
#   this software without specific prior written permission.
#  
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS 
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT 
# LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A 
# PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT 
# OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, 
# SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED
# TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, 
# OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY 
# OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING 
# NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS 
# SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
#

nobase_include_HEADERS = asim/address.h\
		asim/agequeue.h\
		asim/alphaops.h\
		asim/arch_register.h\
		asim/arraylist.h\
		asim/atoi.h\
		asim/atomic.h\
		asim/buffer.h\
		asim/cache_dyn.h\
		asim/cache.h\
		asim/cache_manager.h\
		asim/cache_manager_smp.h\
		asim/cache_mesi.h\
		asim/chip_component.h\
		asim/chunkedqueue.h\
		asim/chunk.h\
		asim/circular_queue.h\
		asim/clockable.h\
		asim/clockserver.h\
        asim/clockserver_threaded_dynamic.h\
		asim/cmd.h\
		asim/cqueue.h\
		asim/damqueue.h\
		asim/deque.h\
		asim/disasm.h\
		asim/dynamic_array.h\
		asim/dynhashtable.h\
		asim/event.h\
		asim/except.h\
		asim/fastlist.h\
		asim/fifo.h\
		asim/freelist.h\
		asim/funnel.h\
		asim/hashtable.h\
		asim/ioformat.h\
		asim/item.h\
		asim/line_status.h\
		asim/memory_reference.h\
		asim/mesg.h\
		asim/message_handler_log.h\
		asim/mm.h\
		asim/mmptr.h\
		asim/mod_numbers_dyn.h\
		asim/mod_numbers.h\
		asim/module.h\
		asim/mpointer.h\
		asim/orderedDAMQueue.h\
		asim/phase.h\
		asim/plru_masks.h\
		asim/pool_allocated_object.h\
		asim/port.h\
		asim/port_handler.h\
		asim/profile.h\
		asim/queue.h\
		asim/rate_matcher.h\
		asim/regexobj.h\
		asim/registerfile.h\
		asim/registry.h\
		asim/resource_stats.h\
		asim/resource_tracker.h\
		asim/sized_stl_queue.h\
		asim/smp.h\
        asim/ssc.h\
		asim/stackdump.h\
		asim/stack.h\
		asim/state.h\
		asim/stateout.h\
		asim/storage.h\
		asim/stripchart.h\
		asim/syntax.h\
		asim/threaded_log.h\
		asim/thread.h\
        asim/threadsafe.h\
        asim/time_events_ring.h\
		asim/trace.h\
		asim/trace_legacy.h\
		asim/trackmem.h\
		asim/traps.h\
		asim/utils.h\
		asim/vector.h\
		asim/xcheck.h\
		asim/xmlout-gdome.h\
		asim/xmlout-nolib-gz.h\
		asim/xmlout-nolib.h\
		asim/xmlout.h
