#
# Copyright (C) 2003-2006 Intel Corporation
# 
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
# 
#

nobase_include_HEADERS =	asim/AEVector.h \
				asim/AMemObj.h \
				asim/DBConfig.h \
				asim/DBGraphEdge.h \
				asim/DBGraph.h \
				asim/DBGraphNode.h \
				asim/DBItoa.h \
				asim/DBListenerDef.h \
				asim/DBListener.h \
				asim/Dict2064.h \
				asim/DralDBDefinitions.h \
				asim/DralDB.h \
				asim/draldb_syntax.h \
				asim/DRALTag.h \
				asim/fvaluevector.h \
				asim/Hash6431.h \
				asim/ItemHandler.h \
				asim/ItemTagDef.h \
				asim/ItemTagHeap.h \
				asim/LogMgr.h \
				asim/PrimeList.h \
				asim/StatObj.h \
				asim/StrTable.h \
				asim/TagDescVector.h \
				asim/TagIdVec.h \
				asim/TagVecDenseDictionary.h \
				asim/TagVecDenseDictionaryNF.h \
				asim/TagVecDenseItemIdx.h \
				asim/TagVecDenseShortItemIdx.h \
				asim/TagVecDictionary.h \
				asim/TagVecDictionaryNF.h \
				asim/TagVec.h \
				asim/TagVecItemIdx.h \
				asim/TrackHeapDef.h \
				asim/TrackHeap.h \
				asim/TrackVec.h \
				asim/ZipObject.h
